--- a/web_static/3-index.html
+++ b/web_static/3-index.html
@@ -11,7 +11,7 @@
       <div class="logo"></div>
     </header>
     <footer>
-      Holberton School
+      Best School
     </footer>
   </body>
 </html>
